Clsoe #62: Make topic part of init packet
