# src/api.rs
@@ -39,7 +39,11 @@ struct HttpServerState {
 #[serde(rename_all = "camelCase")]
 pub struct MessageSendInfo {
     pub dst: MessageDestination,
-    #[serde(with = "base64")]
+    #[serde(default)]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    #[serde(with = "base64::optional_binary")]
+    pub topic: Option<Vec<u8>>,
+    #[serde(with = "base64::binary")]
     pub payload: Vec<u8>,
 }
 
@@ -58,7 +62,11 @@ pub struct MessageReceiveInfo {
     pub src_pk: PublicKey,
     pub dst_ip: IpAddr,
     pub dst_pk: PublicKey,
-    #[serde(with = "base64")]
+    #[serde(default)]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    #[serde(with = "base64::optional_binary")]
+    pub topic: Option<Vec<u8>>,
+    #[serde(with = "base64::binary")]
     pub payload: Vec<u8>,
 }
 
@@ -102,8 +110,11 @@ impl Http {
 struct GetMessageQuery {
     peek: Option<bool>,
     timeout: Option<u64>,
-    /// Optional filter for start of the message.
-    filter: Option<String>,
+    /// Optional filter for start of the message, base64 encoded.
+    #[serde(default)]
+    #[serde(skip_serializing_if = "Option::is_none")]
+    #[serde(with = "base64::optional_binary")]
+    topic: Option<Vec<u8>>,
 }
 
 impl GetMessageQuery {
@@ -127,14 +138,13 @@ async fn get_message(
         query.peek(),
         query.timeout_secs()
     );
+
     // A timeout of 0 seconds essentially means get a message if there is one, and return
     // immediatly if there isn't. This is the result of the implementation of Timeout, which does a
     // poll of the internal future first, before polling the delay.
     tokio::time::timeout(
         Duration::from_secs(query.timeout_secs()),
-        state
-            .message_stack
-            .message(!query.peek(), query.filter.map(String::into_bytes)),
+        state.message_stack.message(!query.peek(), query.topic),
     )
     .await
     .or(Err(StatusCode::NO_CONTENT))
@@ -145,6 +155,11 @@ async fn get_message(
             src_pk: m.src_pk,
             dst_ip: m.dst_ip,
             dst_pk: m.dst_pk,
+            topic: if m.topic.is_empty() {
+                None
+            } else {
+                Some(m.topic)
+            },
             payload: m.data,
         })
     })
@@ -160,8 +175,8 @@ pub struct MessageIdReply {
 #[serde(rename_all = "camelCase")]
 #[serde(untagged)]
 pub enum PushMessageResponse {
-    Id(MessageIdReply),
     Reply(MessageReceiveInfo),
+    Id(MessageIdReply),
 }
 
 #[derive(Deserialize)]
@@ -192,12 +207,22 @@ async fn push_message(
         message_info.payload.len(),
     );
 
-    let (id, sub) = state.message_stack.new_message(
+    let (id, sub) = match state.message_stack.new_message(
         dst,
         message_info.payload,
+        if let Some(topic) = message_info.topic {
+            topic
+        } else {
+            vec![]
+        },
         DEFAULT_MESSAGE_TRY_DURATION,
         query.await_reply(),
-    );
+    ) {
+        Ok((id, sub)) => (id, sub),
+        Err(_) => {
+            return Err(StatusCode::BAD_REQUEST);
+        }
+    };
 
     if !query.await_reply() {
         // If we don't wait for the reply just return here.
@@ -219,6 +244,7 @@ async fn push_message(
                             src_pk: m.src_pk,
                             dst_ip: m.dst_ip,
                             dst_pk: m.dst_pk,
+                            topic: if m.topic.is_empty() { None } else { Some(m.topic.clone()) },
                             payload: m.data.clone(),
                         }))))
                     } else {
@@ -277,24 +303,55 @@ async fn message_status(
 mod base64 {
     use base64::alphabet;
     use base64::engine::{GeneralPurpose, GeneralPurposeConfig};
-    use base64::Engine;
-    use serde::{Deserialize, Serialize};
-    use serde::{Deserializer, Serializer};
 
     const B64ENGINE: GeneralPurpose = base64::engine::general_purpose::GeneralPurpose::new(
         &alphabet::STANDARD,
         GeneralPurposeConfig::new(),
     );
 
-    pub fn serialize<S: Serializer>(v: &Vec<u8>, s: S) -> Result<S::Ok, S::Error> {
-        let base64 = B64ENGINE.encode(v);
-        String::serialize(&base64, s)
+    pub mod binary {
+        use super::B64ENGINE;
+        use base64::Engine;
+        use serde::{Deserialize, Serialize};
+        use serde::{Deserializer, Serializer};
+
+        pub fn serialize<S: Serializer>(v: &Vec<u8>, s: S) -> Result<S::Ok, S::Error> {
+            let base64 = B64ENGINE.encode(v);
+            String::serialize(&base64, s)
+        }
+
+        pub fn deserialize<'de, D: Deserializer<'de>>(d: D) -> Result<Vec<u8>, D::Error> {
+            let base64 = String::deserialize(d)?;
+            B64ENGINE
+                .decode(base64.as_bytes())
+                .map_err(serde::de::Error::custom)
+        }
     }
 
-    pub fn deserialize<'de, D: Deserializer<'de>>(d: D) -> Result<Vec<u8>, D::Error> {
-        let base64 = String::deserialize(d)?;
-        B64ENGINE
-            .decode(base64.as_bytes())
-            .map_err(serde::de::Error::custom)
+    pub mod optional_binary {
+        use super::B64ENGINE;
+        use base64::Engine;
+        use serde::{Deserialize, Serialize};
+        use serde::{Deserializer, Serializer};
+
+        pub fn serialize<S: Serializer>(v: &Option<Vec<u8>>, s: S) -> Result<S::Ok, S::Error> {
+            if let Some(v) = v {
+                let base64 = B64ENGINE.encode(v);
+                String::serialize(&base64, s)
+            } else {
+                <Option<String>>::serialize(&None, s)
+            }
+        }
+
+        pub fn deserialize<'de, D: Deserializer<'de>>(d: D) -> Result<Option<Vec<u8>>, D::Error> {
+            if let Some(base64) = <Option<String>>::deserialize(d)? {
+                B64ENGINE
+                    .decode(base64.as_bytes())
+                    .map_err(serde::de::Error::custom)
+                    .map(Option::Some)
+            } else {
+                Ok(None)
+            }
+        }
     }
 }
